<resources>
    <string name="app_name">KaCyber</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_search_tint">Search for moments, friends or brands</string>
    <string name="countries_and_areas">Uganda</string>
    <string name="your_phone_number">Phone Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_description">By signing up, you automatically agree with</string>
    <string name="terms_and_description"><u>KaCyber terms and conditions</u></string>
    <string name="login_with">Log In with</string>
    <string name="def_more">Pull up to load more</string>
    <string name="discover_txt_pengyouquan">Moments</string>
    <string name="menu_groupchat">Group Chat</string>
    <string name="menu_addfriend">Add Contacts</string>
    <string name="menu_qrcode">Scan QR Code</string>
    <string name="profile_txt_mycode">My QR Code</string>
    <string name="title_activity_discover_cities">DiscoverCitiesActivity</string>
    <string name="app_id">182089848876711</string>
    <string name="fb_login_protocol_scheme">fb182089848876711</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">cc24def9246b78764c53cf42b79b0442</string>
    <string name="APP_NAME">KaCyber</string>
    <string name="permissions_receive_sms_message">
        Grant permission to read your SMS code from your device to pre-fill.
    </string>
    <string name="permissions_receive_sms_title">Read SMS Code</string>

    <string name="permissions_read_phone_state_title">Read Phone Number</string>
    <string name="permissions_read_phone_state_message">
        Grant permission to read your phone number from your device to pre-fill.
    </string>
    <string name="copyright">© KaCyber 2016. All Rights Reserved</string>
    <string name="add_business_text">Add information about your business, and build a close relationship with your audience and customers on Kacyber. Your business profile will not appear in public searched directory until this information has been verified and approved by our staff.</string>

        <string name="permissions_get_accounts_message">
        Grant permission to read your email address from your device to pre-fill.
    </string>
    <string name="permissions_get_accounts_title">Read Email Address</string>

</resources>
