<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.kacyber.ActAndFrg.PhoneNumberFrag">

    <RelativeLayout
        android:id="@+id/signup_header"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:background="@color/white">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="Sing Up"
            android:textColor="@color/black_4a"
            android:textSize="24dp"/>

        <TextView
            android:id="@+id/sign_up_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="18dp"
            android:text="Done"
            android:textSize="18dp"
            android:textColor="@color/black_4a"/>

        <TextView
            android:id="@+id/sign_up_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="18dp"
            android:text="Cancel"
            android:textSize="18dp"
            android:textColor="@color/black_4a"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_below="@id/signup_header"
        android:background="@drawable/btn_enable_white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:text="@string/countries_and_areas"
                android:textColor="#353535"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/person_more" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="#dbdbdb" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <EditText
                android:id="@+id/et_usertel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:hint="@string/your_phone_number"
                android:inputType="phone"
                android:maxLength="11"
                android:paddingLeft="90dp"
                android:layout_marginTop="10dp"
                android:singleLine="true"
                android:textColor="@color/black_4a"
                android:textColorHint="@color/black_4a"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/country_code"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/et_usertel"
                android:layout_centerVertical="true"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="10dp"
                android:text="+256"
                android:textColor="#353535"
                android:textSize="16sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_toRightOf="@id/country_code"
                android:layout_marginLeft="-40dp"

                android:background="#dbdbdb" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentBottom="true"
                android:background="#dbdbdb" />

        </RelativeLayout>

        <TextView
            android:id="@+id/phone_number_login_hint"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="15dp"
            android:textSize="12dp"
            android:text="Please confirm your country code and"
            android:textColor="@color/black_4a"/>

        <TextView
            android:id="@+id/phone_number_login_hint_2"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="12dp"
            android:textSize="12dp"
            android:text="enter your phone number"
            android:textColor="@color/black_4a"/>


    </LinearLayout>


    <TextView
        android:id="@+id/terms_and_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_below="@id/login_description"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/terms_and_description"
        android:textColor="@color/white"
        android:textSize="11dp" />

    <TextView
        android:id="@+id/login_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/login_description"
        android:textColor="@color/white"
        android:textSize="10dp"
        android:layout_below="@+id/container"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
